# common-3.0-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extract_ios_headers.py  header_sources.yaml  mingw-bundledlls.py
.github/workflows/: build-sdk.yml
cmake/: cctools_port.cmake  cmake_toolchain.cmake  csu.cmake  extra_headers.cmake  libc_stub.cmake  licenses.cmake  sdk_headers.cmake  sdk_libs.cmake  utils.cmake
cmake/scripts/: cctool_symlinks.sh
licenses/: COPYING.mman
patches/: cctools.patch  stdint.patch
sources/cmake-toolchain/Platform/: common-3.0.cmake
sources/cmake-toolchain/Toolchain/: common-3.0.cmake
sources/csu/: CMakeLists.txt
sources/iPhoneOS3.0.sdk/usr/include/: dns_sd.h  dtrace.h
sources/iPhoneOS3.0.sdk/usr/include/architecture/arm/: fenv.h
sources/iPhoneOS3.0.sdk/usr/include/mach-o/: compact_unwind_encoding.h  dyld_images.h
sources/iPhoneOS3.0.sdk/usr/include/malloc/: malloc.h
sources/iPhoneOS3.0.sdk/usr/include/netinet/: in.h
sources/iPhoneOS3.0.sdk/usr/include/sys/: kauth.h  syscall.h
sources/libc-stub/: CMakeLists.txt  generate_stub.py  libc_stub.c  missing_touchHLE_symbols.txt  stub.c  touchHLE_symbols.txt
sources/oss-libs/: README.md
sources/sdk-headers/: README.md  extract_ios_headers.py  header_sources.yaml  pyproject.toml  requirements.txt
sources/sdk-headers/patches/: cdefs.patch  cfbase.patch  ctype.patch  pthread.patch  targetconditionals.patch
